# internal/server/server.go
@@ -18,44 +18,84 @@ type WebStoreServer struct {
 }
 
 func (w *WebStoreServer) GetOrders(ctx echo.Context, params api.GetOrdersParams) error {
-	orders, err := w.store.GetOrders(ctx)
+	limit := int32(25)
+	if params.Limit != nil {
+		limit = *params.Limit
+	}
+	offset := int32(0)
+	if params.Offset != nil {
+		offset = *params.Offset
+	}
+	status := ""
+	if params.Status != nil {
+		status = *params.Status
+	}
+	paymentStatus := ""
+	if params.PaymentStatus != nil {
+		paymentStatus = *params.PaymentStatus
+	}
+	orders, err := w.store.GetOrders(limit, offset, status, paymentStatus)
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, "Internal Server Error")
 	}
-	return ctx.JSON(http.StatusOK, orders)
+	return ctx.JSON(http.StatusOK, FromModelsOrderListToAPIOrderList(orders))
 }
 
 func (w *WebStoreServer) CreateOrder(ctx echo.Context) error {
-	order, err := w.store.CreateOrder(ctx)
+	var (
+		req api.Order
+	)
+	if err := ctx.Bind(&req); err != nil {
+		return ctx.JSON(http.StatusBadRequest, "Bad Request")
+	}
+	if req.CustomerId == 0 {
+		return ctx.JSON(http.StatusBadRequest, "Bad Request")
+	}
+
+	order, err := w.store.CreateOrder(FromAPIOrderToModelsOrder(req))
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, "Internal Server Error")
 	}
-	return ctx.JSON(http.StatusOK, order)
+	return ctx.JSON(http.StatusOK, FromModelsOrderToAPIOrder(order))
 }
 
 func (w *WebStoreServer) GetOrderById(ctx echo.Context, id uuid.UUID) error {
-	order, err := w.store.GetOrderById(ctx, id)
+	order, err := w.store.GetOrderById(id)
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, "Internal Server Error")
 	}
 
-	if order == nil {
-		return ctx.JSON(http.StatusNotFound, "Order not found")
-	}
-
-	return ctx.JSON(http.StatusOK, order)
+	return ctx.JSON(http.StatusOK, FromModelsOrderToAPIOrder(order))
 }
 
 func (w *WebStoreServer) UpdateOrderStatus(ctx echo.Context, id uuid.UUID) error {
-	err := w.store.UpdateOrderStatus(ctx, id)
+	var (
+		req api.Order
+	)
+	if err := ctx.Bind(&req); err != nil {
+		return ctx.JSON(http.StatusBadRequest, "Bad Request")
+	}
+
+	order, err := w.store.UpdateOrderStatus(FromAPIOrderToModelsOrder(req), id)
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, "Internal Server Error")
 	}
-	return ctx.JSON(http.StatusOK, "Order updated")
+	return ctx.JSON(http.StatusOK, FromModelsOrderToAPIOrder(order))
 }
 
 func (w *WebStoreServer) PaymentWebhook(ctx echo.Context) error {
-	err := w.store.PaymentWebhook(ctx)
+	var (
+		req api.Webhook
+	)
+	if err := ctx.Bind(&req); err != nil {
+		return ctx.JSON(http.StatusBadRequest, "Bad Request")
+	}
+	// Primitive check for customer ID
+	if ctx.Request().Header.Get("X-Customer-ID") != "123" {
+		return ctx.JSON(http.StatusUnauthorized, "Unauthorized")
+	}
+	//
+	err := w.store.PaymentWebhook(FromAPIWebhookToModelsWebhook(req))
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, "Internal Server Error")
 	}
@@ -63,43 +103,73 @@ func (w *WebStoreServer) PaymentWebhook(ctx echo.Context) error {
 }
 
 func (w *WebStoreServer) GetProducts(ctx echo.Context, params api.GetProductsParams) error {
-	products, err := w.store.GetProducts(ctx, params)
+	limit := int32(25)
+	if params.Limit != nil {
+		limit = *params.Limit
+	}
+	offset := int32(0)
+	if params.Offset != nil {
+		offset = *params.Offset
+	}
+	minQuantity := int32(0)
+	if params.MinQuantity != nil {
+		minQuantity = *params.MinQuantity
+	}
+
+	products, err := w.store.GetProducts(limit, offset, minQuantity)
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, "Internal Server Error")
 	}
-	return ctx.JSON(http.StatusOK, products)
+	return ctx.JSON(http.StatusOK, FromModelsProductListToAPIProductList(products))
 }
 
 func (w *WebStoreServer) AddProducts(ctx echo.Context) error {
-	products, err := w.store.AddProducts(ctx)
+	var (
+		req api.ProductList
+	)
+	if err := ctx.Bind(&req); err != nil {
+		return ctx.JSON(http.StatusBadRequest, "Bad Request")
+	}
+	if len(req) == 0 {
+		return ctx.JSON(http.StatusBadRequest, "Bad Request")
+	}
+
+	products, err := w.store.AddProducts(FromAPIProductListToModelsProductList(req))
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, "Internal Server Error")
 	}
-	return ctx.JSON(http.StatusOK, products)
+	return ctx.JSON(http.StatusOK, FromModelsProductListToAPIProductList(products))
 }
 
 func (w *WebStoreServer) DeleteProductById(ctx echo.Context, id uuid.UUID) error {
-	product, err := w.store.DeleteProductById(ctx, id)
+	product, err := w.store.DeleteProductById(id)
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, "Internal Server Error")
 	}
-	return ctx.JSON(http.StatusOK, product)
+	return ctx.JSON(http.StatusOK, FromModelsProductToAPIProduct(product))
 }
 
 func (w *WebStoreServer) GetProductById(ctx echo.Context, id uuid.UUID) error {
-	product, err := w.store.GetProductById(ctx, id)
+	product, err := w.store.GetProductById(id)
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, "Internal Server Error")
 	}
-	return ctx.JSON(http.StatusOK, product)
+	return ctx.JSON(http.StatusOK, FromModelsProductToAPIProduct(product))
 }
 
 func (w *WebStoreServer) UpdateProductById(ctx echo.Context, id uuid.UUID) error {
-	err := w.store.UpdateProductById(ctx, id)
+	var (
+		req api.Product
+	)
+	if err := ctx.Bind(&req); err != nil {
+		return ctx.JSON(http.StatusBadRequest, "Bad Request")
+	}
+
+	product, err := w.store.UpdateProductById(FromAPIProductToModelsProduct(req), id)
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, "Internal Server Error")
 	}
-	return ctx.JSON(http.StatusOK, "Product updated")
+	return ctx.JSON(http.StatusOK, FromModelsProductToAPIProduct(product))
 }
 
 func NewWebStoreServer(logger zerolog.Logger, store types.Store) WebStoreServer {
